Changed last fig

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -1134,12 +1134,12 @@ human brain streamlines are shown, approximating the brain's white matter connec
 generated from EuDX. In contrast, in Fig.~\ref{Fig:fornix} only a specific anatomical bundle is
 approximated rather than the full brain.
 
-\begin{figure}
-\includegraphics[scale=0.75]{Figures/pretty_streamlines.eps}
+\begin{figure*}[!htb]
+\includegraphics[scale=0.46]{Figures/qb.eps}
 \centering{}
 \caption{An example of EuDX based fiber tracking applied on a real
   human brain dataset\label{Fig:pretty_streamlines}}
-\end{figure}
+\end{figure*}
 
 \subsection{Probabilistic}
 
