--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -6,13 +6,8 @@
 @inproceedings{Maximilien2003,
 author = {Maximilien, E Michael and Williams, Laurie},
 title = {{Assessing Test-Driven Development at IBM}},
-year = {2013}
-booktitle = {Proceedings of the 25th International Conference on Software Engineering, 2003},
-}
-
-@article{Maximilien2003,
-
-volume = {6}
+year = {2013},
+booktitle = {Proceedings of the 25th International Conference on Software Engineering, 2003}
 }
 
 @article{Donoho2010,
@@ -180,10 +175,11 @@ keywords = "Parallel imaging"
 
 @article{gramfort-etal-media:13,
   author = {Gramfort, A. and  Poupon, C. and Descoteaux, M.},
-  title	 = {Denoising and fast diffusion imaging with physically constrained sparse dictionary learning}, 
+  title	 = {Denoising and fast diffusion imaging with physically constrained sparse dictionary learning},
   journal = {Medical Image Analysis},
   year = {2013},
-  number = {in press}
+  volume ={18},
+  number = {1}
 }
 
 
@@ -1854,7 +1850,7 @@ author = "Paul A. Yushkevich and Hongzhi Wang and John Pluta and Sandhitsu R. Da
 }
 
 @article{Calamante20101233,
-title = "Track-density imaging (TDI): Super-resolution white matter imaging using whole-brain track-density mapping", 
+title = "Track-density imaging (TDI): Super-resolution white matter imaging using whole-brain track-density mapping",
 journal = "NeuroImage",
 volume = "53",
 number = "4",
