A couple more corrections

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -1146,7 +1146,7 @@ at a seed point and continue along a propagation direction which is randomly
 chosen from the fODF. The propagation direction is continually adjusted by
 sampling from the fODF at each new location along the path. This continues until
 some stopping criteria are met. Notice that this framework is equivalent to
-deterministic fiber tracking if the PDF at each point is a delta function of
+deterministic fiber tracking if the fODF at each point is a delta function of
 one fiber direction.
 
 Dipy has implemented two interfaces for probabilistic Markov fiber tracking. The
@@ -1348,7 +1348,7 @@ Dipy is free and open source software and it is part of a larger community found
 This is a growing team of scientists and developers focusing on sharing code for different modalities
 of brain imaging. In common with the other Nipy projects, Dipy is being developed under the
 umbrella of a single github organization\footnote{\url{http://github.com/nipy}} and the central
-Dipy github repository is managed under this organization\footnote{\url{http://github.com/nipy/dipy}}).
+Dipy github repository is managed under this organization\footnote{\url{http://github.com/nipy/dipy}}.
 The community provides support for the use and development of these software tools through
 the project's mailing list\footnote{\url{http://dipy.org/subscribe.html}}.
 
@@ -1359,7 +1359,7 @@ developer community. In contrast to many other software projects in
 neuroimaging, Dipy is not based on the work of one lab, or one institution. Though
 many of the contributions are made by a few core contributors, there are many
 contributors to the code-base and the number of contributors has been growing
-dramatically after the 0.6 which took place on April 2013 ~\ref{Fig:gh_stats},
+dramatically after the 0.6 which took place on April 2013 (see Fig.~\ref{Fig:gh_stats}),
 with contributors based in at least seven different academic
 institutions in five countries (Canada, UK, USA, Italy and South Africa).
 
@@ -1367,14 +1367,14 @@ institutions in five countries (Canada, UK, USA, Italy and South Africa).
 \centering{}
 \includegraphics[scale=0.37]{Figures/fig-gh.eps}
 \caption{Participation in the Dipy github repository. The cumulative number of
-  unique contributors has been extracted from the git log and tallied. Many
+  unique contributors has been extracted from the git log command and tallied. Many
   new contributors have joined the project after the 0.6 release\label{Fig:gh_stats}}
 \end{figure}
 
 In conclusion, we hope this paper inspires you to share our excitement in developing Dipy and encourages
 you to participate in the project. We strongly hope that more scientists will join
 Dipy by using the software and giving us feedback so that we can make it better. Stronger still
-is our hope that many will chose to share their code and join the developers team. We are sure that
+is our hope that many will choose to share their code and join the developers team. We are confident that
 a wide and open participation is absolutely necessary in order to solve the hard problem of brain mapping.
 
 
