--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -12469,7 +12469,7 @@ Resonance in Medicine},
 
 @inproceedings{vaillancourt:11,
 author = {Vaillancourt, Olivier and Bor\'{e}, Arnaud and Girard, Gabriel and Descoteaux, Maxime},
-booktitle = {Organization for Human Brain Mapping (HBM'11)},
+booktitle = {Organization for Human Brain Mapping},
 title = {{A Fiber Navigator for Neurosurgical Planning}},
 year = {2011}
 }
