Bibtex updated with Ian's changes

--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -7,6 +7,7 @@
 author = {Maximilien, E Michael and Williams, Laurie},
 title = {{Assessing Test-Driven Development at IBM}},
 year = {2013},
+volume = {6},
 booktitle = {Proceedings of the 25th International Conference on Software Engineering, 2003}
 }
 
@@ -34,7 +35,7 @@ author = "Tomokazu Numano and Kazuhiro Homma and Nobuaki Iwasaki and Koji Hyodo 
 
 @article{Caruyer2013,
 author = {Caruyer, Emmanuel and Lenglet, Christophe and Sapiro, Guillermo and Deriche, Rachid},
-journal = {Magnetic resonance in medicine : official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine},
+journal = {Magnetic resonance in medicine},
 number = {6},
 pages = {1534--40},
 title = {{Design of multishell sampling schemes with uniform coverage in diffusion MRI.}},
@@ -1850,7 +1851,7 @@ author = "Paul A. Yushkevich and Hongzhi Wang and John Pluta and Sandhitsu R. Da
 }
 
 @article{Calamante20101233,
-title = "Track-density imaging (TDI): Super-resolution white matter imaging using whole-brain track-density mapping",
+title = "Track-density imaging (TDI): Super-resolution white matter imaging using whole-brain track-density mapping", 
 journal = "NeuroImage",
 volume = "53",
 number = "4",
